# nix-collector

./: .gitignore  Collector.code-workspace  README.md  flake.nix  sysfab.nix.collector.json
.github/workflows/: release.yml
data/: meson.build  sysfab.nix.collector.desktop.in  sysfab.nix.collector.gschema.xml  sysfab.nix.collector.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES
src/: collector  main.py  preferences.py  window.py
src/assets/: style.css
src/gtk/: main-menu.ui  preferences.ui
src/lib/: constants.py
